<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="14dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/swap_horizontal_circle"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_value"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/quantity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/convert_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/conversion_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <RadioButton
                android:id="@+id/radio_m_km"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:hint="@string/m_km"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/radio_g_kg"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="26dp"
                android:hint="@string/g_kg"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/radio_cels_fahr"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="12dp"
                android:hint="@string/cels_fahr"
                android:padding="2dp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/clear" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/convert" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id = "@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/result"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:padding="8dp">
        </TextView>
        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_neutral30"
            android:layout_margin="12dp"
            android:gravity="center"
            android:hint="@string/result"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/showBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/hide" />
    </LinearLayout>
    <LinearLayout
        android:id = "@+id/savedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/converts_saved"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:padding="8dp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>

